# smartV8

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: simple_fragment_shader.fs
app/src/main/assets/script/: main.js
app/src/main/cpp/: CMakeLists.txt  ColorShaderProgram.cpp  ColorShaderProgram.h  LocalCFunction.cpp  LocalCFunction.h  Mallet.cpp  ResourceReader.cpp  ResourceReader.h  ShaderHelper.cpp  ShaderHelper.h  ShaderProgram.cpp  ShaderProgram.h  Table.cpp  TextureHelper.cpp  TextureHelper.h  TextureShaderProgram.cpp  TextureShaderProgram.h  Triangle.cpp  Triangle.h  gl_code.cpp  log.h  v8Helper.cpp  v8Helper.h
app/src/main/java/com/android/gl2v8/: GL2JNIActivity.java  GL2JNILib.java  GL2JNIView.java
app/src/main/res/values/: strings.xml
